--- a/grid.html
+++ b/grid.html
@@ -35,7 +35,8 @@
 	-->
 </head>
 <body lang="en" id="top">
-	<div class="container">
+	<div class="container-fluid">
+		<h1>Chipped Beef CSS Framework</h1>
 		<div class="row-fluid show-grid">
 			<div class="span1">1</div>
 			<div class="span1">1</div>
