--- a/grid.html
+++ b/grid.html
@@ -37,6 +37,7 @@
 <body lang="en" id="top">
 	<div class="container-fluid">
 		<h1>Chipped Beef CSS Framework</h1>
+		<h2>Fluid Grid</h2>
 		<div class="row-fluid show-grid">
 			<div class="span1">1</div>
 			<div class="span1">1</div>
@@ -65,6 +66,39 @@
 			<div class="span6">6</div>
 		</div>
 			<div class="row-fluid show-grid">
+			<div class="span12">12</div>
+		</div>
+	</div>
+	<div class="container">
+		<h2>Fixed Grid</h2>
+		<div class="row show-grid">
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+			<div class="span1">1</div>
+		</div>
+		<div class="row show-grid">
+			<div class="span4">4</div>
+			<div class="span4">4</div>
+			<div class="span4">4</div>
+		</div>
+			<div class="row show-grid">
+			<div class="span4">4</div>
+			<div class="span8">8</div>
+		</div>
+			<div class="row show-grid">
+			<div class="span6">6</div>
+			<div class="span6">6</div>
+		</div>
+			<div class="row show-grid">
 			<div class="span12">12</div>
 		</div>
 	</div>
