Updated demo page

--- a/grid.html
+++ b/grid.html
@@ -98,7 +98,9 @@
 				<div class="row show-grid">
 				<div class="span12">12</div>
 			</div>
-		
+		<h2>Buttons</h2>
+		<button class="button">Send File</button>
+		<button class="button secondary">Cancel</button>
 	</div>
 </body>
 </html>
