--- a/grid.html
+++ b/grid.html
@@ -101,6 +101,23 @@
 		<h2>Buttons</h2>
 		<button class="button">Send File</button>
 		<button class="button secondary">Cancel</button>
+		<h2>Forms</h2>
+		<form>
+			<div class="row">
+				<input type="text" name="" value="" placeholder="Input" class="span12">
+			</div>
+			<div class="row">
+				<div class="span6">
+					<input type="text" name="" value="" placeholder="Input">
+				</div>
+				<div class="span6">
+					<input type="text" name="" value="" placeholder="Input">
+				</div>
+			</div>
+			<div class="row">
+				<div class="span12"><textarea name="" placeholder="Textarea"></textarea></div>
+			</div>
+		</form>
 	</div>
 </body>
 </html>
