Updated with new color states

--- a/grid.html
+++ b/grid.html
@@ -99,19 +99,25 @@
 				<div class="span12">12</div>
 			</div>
 		<h2>Buttons</h2>
-		<button class="button">Send File</button>
+		<button class="button sucess">Sucess</button>
+		<button class="button danger">Delete Forever</button>
 		<button class="button secondary">Cancel</button>
 		<h2>Forms</h2>
 		<form>
-			<div class="row">
-				<input type="text" name="" value="" placeholder="Input" class="span12">
-			</div>
 			<div class="row">
 				<div class="span6">
 					<input type="text" name="" value="" placeholder="Input">
 				</div>
 				<div class="span6">
-					<input type="text" name="" value="" placeholder="Input">
+					<input type="text" name="" value="" placeholder="Disabled" disabled="disabled">
+				</div>
+			</div>
+			<div class="row">
+				<div class="span6">
+					<input type="text" name="" value="Error" class="error">
+				</div>
+				<div class="span6">
+					<input type="text" name="" value="Success" class="success">
 				</div>
 			</div>
 			<div class="row">
