--- a/grid.html
+++ b/grid.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="A modular, lightweight CSS framework from Hag Designs">
 	<meta name="author" content="Hag Designs">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<title>Chipped Beef Framework - Grid Demo</title>
 
@@ -19,84 +19,39 @@
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-
-	<!--
-	 _     _                _____             _                  
-	| |   | |              (____ \           (_)                 
-	| |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
-	|  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
-	| |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
-	|_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
-	              (_____|                      (_____|2013
-
-	-->
 </head>
 <body lang="en" id="top">
-	<div class="container-fluid">
-		<h1>Chipped Beef CSS Framework</h1>
-		<h2>Fluid Grid</h2>
-		<div class="row-fluid show-grid">
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-			<div class="span1">1</div>
-		</div>
-		<div class="row-fluid show-grid">
-			<div class="span4">4</div>
-			<div class="span4">4</div>
-			<div class="span4">4</div>
-		</div>
-			<div class="row-fluid show-grid">
-			<div class="span4">4</div>
-			<div class="span8">8</div>
-		</div>
-			<div class="row-fluid show-grid">
-			<div class="span6">6</div>
-			<div class="span6">6</div>
-		</div>
-			<div class="row-fluid show-grid">
-			<div class="span12">12</div>
-		</div>
-	</div>
 	<div class="container">
-		<h2>Fixed Grid</h2>
+		<h2>Grid</h2>
 			<div class="row show-grid">
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
-				<div class="span1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
+				<div class="col-md-1">1</div>
 			</div>
 			<div class="row show-grid">
-				<div class="span4">4</div>
-				<div class="span4">4</div>
-				<div class="span4">4</div>
+				<div class="col-md-4">4</div>
+				<div class="col-md-4">4</div>
+				<div class="col-md-4">4</div>
 			</div>
 				<div class="row show-grid">
-				<div class="span4">4</div>
-				<div class="span8">8</div>
+				<div class="col-md-4">4</div>
+				<div class="col-md-8">8</div>
 			</div>
 				<div class="row show-grid">
-				<div class="span6">6</div>
-				<div class="span6">6</div>
+				<div class="col-md-6">6</div>
+				<div class="col-md-6">6</div>
 			</div>
 				<div class="row show-grid">
-				<div class="span12">12</div>
+				<div class="col-md-12">12</div>
 			</div>
 		<h2>Buttons</h2>
 		<button class="button sucess">Sucess</button>
@@ -105,23 +60,23 @@
 		<h2>Forms</h2>
 		<form>
 			<div class="row">
-				<div class="span6">
+				<div class="col-md-6">
 					<input type="text" name="" value="" placeholder="Input">
 				</div>
-				<div class="span6">
+				<div class="col-md-6">
 					<input type="text" name="" value="" placeholder="Disabled" disabled="disabled">
 				</div>
 			</div>
 			<div class="row">
-				<div class="span6">
+				<div class="col-md-6">
 					<input type="text" name="" value="Error" class="error">
 				</div>
-				<div class="span6">
+				<div class="col-md-6">
 					<input type="text" name="" value="Success" class="success">
 				</div>
 			</div>
 			<div class="row">
-				<div class="span12"><textarea name="" placeholder="Textarea"></textarea></div>
+				<div class="col-md-12"><textarea name="" placeholder="Textarea"></textarea></div>
 			</div>
 		</form>
 	</div>
