--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="public/bundle.css">
 
+	<!-- Icons -->
+	<link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon/152x152.png?2">
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/img/apple-touch-icon/120x120.png?2">
+	<link rel="shortcut icon" href="<?php echo url('/').'/design/images/favicon.png' ?>" type="image/png">
+
+	<!-- JS -->
+	<script src="public/js/main.js"></script>
+
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
